name = "swedish-learning-mcp"
version = "0.2.0"
description = "MCP server for Swedish language learning with Notion integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "notion-client>=2.3.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
swedish-learning-mcp = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
